@@ -15,6 +15,7 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
      Time.
    - Fixed FM-TOWNS version of Indy3 failing on Amiga port.
    - Fixed crash in MM NES when clicking on top screen area
+   - Now it is possible to turn on or off subtitles during SMUSH movies
 
  Simon:
    - Improved support for international versions of the Feeble Files.
